Add padding between the alert indicator and close button on tabs.

The new padding is per the spec. The padding disappears any time the
close button does. The padding is increased in touch-optimized mode.
There should be no change to pre-Refresh behavior.

This patch also increases the width at which close buttons disappear in
touchable mode, to account for the increased size of all elements.

Bug: 862320
Change-Id: I75b607d80f0325b8d329213848a11540fdf845b5
Reviewed-on: https://chromium-review.googlesource.com/1142614
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576660}
Former-commit-id: 7db537ee5e8a1a61342e333194c574ce834aac51